removing iron-flex

--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,7 @@
   "description": "Logohow shield teams tuintra",
   "main": "menu-title-tuintra.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "iron-flex-layout": "^2.0.0"
+    "polymer": "Polymer/polymer#^1.4.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
